Adjust execution_strategy on the rulebook and use fully qualified k8s module

--- a/playbooks/tasks/process_cluster_events_kubeconfig.yaml
+++ b/playbooks/tasks/process_cluster_events_kubeconfig.yaml
@@ -8,8 +8,8 @@
       Cluster {{ item.cguName }} managed by {{ item.leafHubName }} hub SUCCEEDED.
       Cluster is ready for workloads.
 
-- name: "Create maintenance label for cluster {{ item.cguName }}"
-  k8s:
+- name: "Create ztp-ansible=running label for cluster {{ item.cguName }}"
+  kubernetes.core.k8s:
     kubeconfig: "{{ kubeconfig }}"
     state: patched
     api_version: cluster.open-cluster-management.io/v1
@@ -27,8 +27,8 @@
   ansible.builtin.pause:
     seconds: 60
 
-- name: "Create completed label for cluster {{ item.cguName }}"
-  k8s:
+- name: "Create ztp-ansible=completed label for cluster {{ item.cguName }}"
+  kubernetes.core.k8s:
     kubeconfig: "{{ kubeconfig }}"
     state: patched
     api_version: cluster.open-cluster-management.io/v1
